--- a/week4/css/styles.css
+++ b/week4/css/styles.css
@@ -52,3 +52,14 @@ body {
   position: absolute;
   bottom: 0px;
   z-index: 1; }
+
+.modal-content {
+  border: 0px; }
+  .modal-content .modal-header {
+    background: #151925;
+    color: floralwhite;
+    border: none; }
+    .modal-content .modal-header .close {
+      color: floralwhite; }
+  .modal-content .modal-body {
+    background: #8ea8c2; }
